--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -44,6 +44,7 @@ exec-once = sunshine
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt6ct
+env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
 
 
 #####################
@@ -241,14 +242,13 @@ binde = $mainMod, B, exec, pkill -SIGUSR1 waybar
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = float, class:(zenity), title:(Winetricks)
 windowrulev2 = float, class:(blueman-manager), title:(Bluetooth Devices)
 windowrulev2 = float, class:(xarchiver), title:()
-#windowrulev2 = float, class:
+windowrulev2 = float, class:(org.pulseaudio.pavucontrol), title:()
+
+# Layer Rules
+# layerrule = blur,waybar
+
+# Special Workspace-Rules (Scratchpad)
