--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -26,17 +26,19 @@ $browser = firefox
 #################
 ### AUTOSTART ###
 #################
-exec-once = waybar
+# exec-once = waybar
+exec-once = ags
 exec-once = swww-daemon
-exec-once = /home/jake/.local/bin/swwwslideshow.sh
 exec-once = systemctl --user start plasma-polkit-agent
 exec-once = dunst
-exec-once = nm-applet
 exec-once = discord --start-minimized
 exec-once = steam -silent
 exec-once = pasystray
 exec-once = blueman-applet
-exec-once = sunshine
+exec-once = xrdb ~/.Xresources
+#exec-once = /home/jake/.local/bin/scripts/swwwslideshow.sh
+# exec-once = nm-applet
+# exec-once = sunshine      BUG: Currently broken until wlr_screencopy_v1 is merged into sunshine
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -215,13 +217,9 @@ binde = $mainMod, h, resizeactive, -10 0
 bind = $mainMod, S, togglespecialworkspace, kitty -e btop
 #bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+# Scroll through existing workspaces with META + scroll
+bind = $META, mouse_down, workspace, e+1
+bind = $META, mouse_up, workspace, e-1
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
@@ -231,9 +229,13 @@ bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
+# Hyprpanel (Bar)
+binde = $META, b, exec, ags -t bar-0
+
 # Waybar
-binde = $mainMod, B, exec, pkill -SIGUSR1 waybar
-# bind = $mainMod, W, exec, pkill -SIGUSR2 waybar
+# bind = $META SHIFT, b, exec, ~/.local/bin/scripts/waybar_launch.sh # Reload config
+# binde = $META, B, exec, pkill -SIGUSR1 waybar # Toggle visibility
+
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -247,8 +249,3 @@ windowrulev2 = float, class:(zenity), title:(Winetricks)
 windowrulev2 = float, class:(blueman-manager), title:(Bluetooth Devices)
 windowrulev2 = float, class:(xarchiver), title:()
 windowrulev2 = float, class:(org.pulseaudio.pavucontrol), title:()
-
-# Layer Rules
-# layerrule = blur,waybar
-
-# Special Workspace-Rules (Scratchpad)
