--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -11,13 +11,13 @@ env = NVD_BACKEND_direct
 ### MONITORS ###
 ################
 monitor= DP-1, 3440x1440@165, 0x0, 1
-# monitor= HEADLESS-1, 2732x2048@120,0x0,2
+# monitor= HEADLESS-2, 2732x2048@120, 0x0,2    BUG: Currently broken until wlr_screencopy_v1 is merged into sunshine 
 
 ###################
 ###  PROGRAMS   ###
 ###################
 
-$mainMod = SUPER
+$META = SUPER
 $terminal = kitty
 $fileManager = kitty -e lf
 $menu = wofi -H 400 -W 600 --show drun --insensitive -I
@@ -113,10 +113,10 @@ master {
     drop_at_cursor = true
 }
 # Master-Layout Binds
-binde = $mainMod, j, layoutmsg, cyclenext
-binde = $mainMod, k, layoutmsg, cycleprev
-binde = $mainMod, RETURN, layoutmsg, swapwithmaster master
-binde = $mainMod, M, fullscreen
+binde = $META, j, layoutmsg, cyclenext
+binde = $META, k, layoutmsg, cycleprev
+binde = $META, RETURN, layoutmsg, swapwithmaster master
+binde = $META, M, fullscreen
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
@@ -168,54 +168,54 @@ device {
 ###################
 ### KEYBINDINGS ###
 ###################
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod+SHIFT, Return, exec, $terminal # Launch kitty
-bind = $mainMod+SHIFT, C, killactive, # Kill active windows
-bind = $mainMod+SHIFT, Q, exit, # Exit hyprland
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod+SHIFT, E, exec, pcmanfm
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, P, exec, $menu # Launch wofi
-bind = $mainMod+SHIFT, f, exec, $browser # Launch firefox
+bind = $META+SHIFT, Return, exec, $terminal # Launch kitty
+bind = $META+SHIFT, C, killactive, # Kill active windows
+bind = $META+SHIFT, Q, exit, # Exit hyprland
+bind = $META, E, exec, $fileManager
+bind = $META+SHIFT, E, exec, dolphin
+bind = $META, V, togglefloating,
+bind = $META, P, exec, $menu # Launch wofi
+bind = $META+SHIFT, f, exec, $browser # Launch firefox
+bind = Control_L+SHIFT, Escape, exec, kitty -e htop # Launch htop
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+# Move focus with META + arrow keys
+bind = $META, left, movefocus, l
+bind = $META, right, movefocus, r
+bind = $META, up, movefocus, u
+bind = $META, down, movefocus, d
 
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+# Switch workspaces with META + [0-9]
+bind = $META, 1, workspace, 1
+bind = $META, 2, workspace, 2
+bind = $META, 3, workspace, 3
+bind = $META, 4, workspace, 4
+bind = $META, 5, workspace, 5
+bind = $META, 6, workspace, 6
+bind = $META, 7, workspace, 7
+bind = $META, 8, workspace, 8
+bind = $META, 9, workspace, 9
+bind = $META, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
-bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
-bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
-bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
-bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
-bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
-bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
-bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
-bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
-bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
+# Move active window to a workspace with META + SHIFT + [0-9]
+bind = $META SHIFT, 1, movetoworkspacesilent, 1
+bind = $META SHIFT, 2, movetoworkspacesilent, 2
+bind = $META SHIFT, 3, movetoworkspacesilent, 3
+bind = $META SHIFT, 4, movetoworkspacesilent, 4
+bind = $META SHIFT, 5, movetoworkspacesilent, 5
+bind = $META SHIFT, 6, movetoworkspacesilent, 6
+bind = $META SHIFT, 7, movetoworkspacesilent, 7
+bind = $META SHIFT, 8, movetoworkspacesilent, 8
+bind = $META SHIFT, 9, movetoworkspacesilent, 9
+bind = $META SHIFT, 0, movetoworkspacesilent, 10
 
 # Resize window
-binde = $mainMod, l, resizeactive, 10 0
-binde = $mainMod, h, resizeactive, -10 0
+binde = $META, l, resizeactive, 10 0
+binde = $META, h, resizeactive, -10 0
 
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, kitty -e btop
-#bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $META, S, togglespecialworkspace, special
+#bind = $META SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with META + scroll
 bind = $META, mouse_down, workspace, e+1
