Update hyprland config
- Add link for wlr_screencopy_v1 filed bug in sunshine repo
- Change polkit from kde to gnome (since gtk is easier to theme)
- Remove waybar stuff in favor of ags (hyprpanel)
- Change hyprcursor theme to Dacula

--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -27,7 +27,7 @@ env = NVD_BACKEND_direct
 ### MONITORS ###
 ################
 monitor= DP-1, 3440x1440@165, 0x0, 1
-# monitor= HEADLESS-2, 2732x2048@120, 0x0,2    BUG: Currently broken until wlr_screencopy_v1 is merged into sunshine 
+# monitor= HEADLESS-2, 2732x2048@120, 0x0,2    BUG: Currently broken until wlr_screencopy_v1 is merged into sunshine -- (https://github.com/LizardByte/Sunshine/issues/2955)
 
 ###################
 ###  PROGRAMS   ###
@@ -42,24 +42,22 @@ $browser = firefox
 #################
 ### AUTOSTART ###
 #################
-# exec-once = waybar
 exec-once = ags
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+# exec-once = systemctl --user start plasma-polkit-agent
 exec-once = swww-daemon
-exec-once = systemctl --user start plasma-polkit-agent
+exec-once = ~/.local/bin/scripts/swwwslideshow.sh ~/Pictures/Wallpapers
 exec-once = dunst
 exec-once = discord --start-minimized
 exec-once = steam -silent
-exec-once = pasystray
-exec-once = blueman-applet
 exec-once = xrdb ~/.Xresources
-#exec-once = /home/jake/.local/bin/scripts/swwwslideshow.sh
-# exec-once = nm-applet
-# exec-once = sunshine      BUG: Currently broken until wlr_screencopy_v1 is merged into sunshine
+# exec-once = sunshine      BUG: Currently broken until wlr_screencopy_v1 is merged into sunshine -- (https://github.com/LizardByte/Sunshine/issues/2955)
 
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
 env = XCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,hyprcursor_Dracula
 env = HYPRCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
