--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -73,11 +73,10 @@ general {
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
-    resize_on_border = false 
+    resize_on_border = false
     allow_tearing = false
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 10
     active_opacity = 1.0
@@ -88,20 +87,16 @@ decoration {
     col.shadow = rgba(1a1a1aee)
     blur {
         enabled = true
-        size = 5
-        passes = 4
+        size = 6
+        passes = 5
         vibrancy = 0.1696
+        special = true
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = true
-
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
@@ -110,7 +105,6 @@ animations {
     animation = workspaces, 1, 6, default
 }
 
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
     new_status = master
     allow_small_split = false
@@ -126,56 +120,49 @@ master {
     smart_resizing = true
     drop_at_cursor = true
 }
+
 # Master-Layout Binds
 binde = $META, j, layoutmsg, cyclenext
 binde = $META, k, layoutmsg, cycleprev
 binde = $META, RETURN, layoutmsg, swapwithmaster master
 binde = $META, M, fullscreen
 
-# https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
     vrr = 2  # [2] Set vrr to fullscreen only [1] Set vrr to always on [0] Set vrr to off
     enable_swallow = true
+    swallow_regex = ^(Alacritty|kitty|foot)$
 }
 
 cursor {
-    inactive_timeout = 3
+    no_hardware_cursors = false
+    allow_dumb_copy= true # Allow hardware cursors on nvidia
+    hide_on_key_press = false
+    inactive_timeout = 2
   }
+
+debug {
+  overlay = false
+}
 
 #############
 ### INPUT ###
 #############
 
-# https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = us
-    repeat_delay = 300
-    repeat_rate = 50
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
-
+    repeat_delay = 250
+    repeat_rate = 75
     follow_mouse = 1
-
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
     accel_profile = flat
-
-    touchpad {
-        natural_scroll = false
-    }
+    # kb_options = caps:swapescape
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     workspace_swipe = false
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
 }
 
 
@@ -186,7 +173,7 @@ bind = $META+SHIFT, Return, exec, $terminal # Launch kitty
 bind = $META+SHIFT, C, killactive, # Kill active windows
 bind = $META+SHIFT, Q, exit, # Exit hyprland
 bind = $META, E, exec, $fileManager
-bind = $META+SHIFT, E, exec, dolphin
+bind = $META+SHIFT, E, exec, nautilus
 bind = $META, V, togglefloating,
 bind = $META, P, exec, $menu # Launch wofi
 bind = $META+SHIFT, f, exec, $browser # Launch firefox
@@ -226,10 +213,14 @@ bind = $META SHIFT, 0, movetoworkspacesilent, 10
 binde = $META, l, resizeactive, 10 0
 binde = $META, h, resizeactive, -10 0
 
+# Move/resize windows with mainMod + LMB/RMB and dragging    WARNING: Do not delete if you want to be able to resize windows
+bindm = $META, mouse:272, movewindow
+bindm = $META, mouse:273, resizewindow
+
 
 # Example special workspace (scratchpad)
-bind = $META, S, togglespecialworkspace, special
-#bind = $META SHIFT, S, movetoworkspace, special:magic
+bind = $META, S, togglespecialworkspace, special:magic
+# bind = $META SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with META + scroll
 bind = $META, mouse_down, workspace, e+1
@@ -246,20 +237,16 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 # Hyprpanel (Bar)
 binde = $META, b, exec, ags -t bar-0
 
-# Waybar
-# bind = $META SHIFT, b, exec, ~/.local/bin/scripts/waybar_launch.sh # Reload config
-# binde = $META, B, exec, pkill -SIGUSR1 waybar # Toggle visibility
-
-
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
-
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = float, class:(zenity), title:(Winetricks)
 windowrulev2 = float, class:(blueman-manager), title:(Bluetooth Devices)
 windowrulev2 = float, class:(xarchiver), title:()
 windowrulev2 = float, class:(org.pulseaudio.pavucontrol), title:()
+windowrulev2 = float, class:(steam), title:(Steam Settings)
+windowrulev2 = float, class:(steam), title:(Friends List)
+windowrulev2 = float, class:(org.openrgb.OpenRGB), title:(OpenRGB)
+windowrulev2 = float, class:(org.openrgb.OpenRGB), title:(Profile Name)
