--- a/private_dot_config/kitty/kitty.conf
+++ b/private_dot_config/kitty/kitty.conf
@@ -1,16 +1,9 @@
-# font_family      SauceCodePro Nerd Font Mono
 font_size 14.0
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
 
 enable_audio_bell no
-
 window_padding_width 16
-
 confirm_os_window_close 0
-
-background_opacity 0.8
+background_opacity 0.75
 
 
 # BEGIN_KITTY_THEME
@@ -19,7 +12,10 @@ include current-theme.conf
 # END_KITTY_THEME
 
 
-font_family      family="RobotoMono Nerd Font Mono"
+
+# BEGIN_KITTY_FONTS
+font_family      family="JetBrainsMono Nerd Font Mono"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
+# END_KITTY_FONTS
