Update Hyprland Config
- Change plasma-polkit-agent to gnome-polkit-agent
- Switch from dunst to swaync
- Add script for Bitwarden/Hyprland

--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -44,13 +44,13 @@ $browser = firefox
 #################
 exec-once = ags
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-# exec-once = systemctl --user start plasma-polkit-agent
 exec-once = swww-daemon
 exec-once = ~/.local/bin/scripts/swwwslideshow.sh ~/Pictures/Wallpapers
-exec-once = dunst
+exec-once = swaync
 exec-once = discord --start-minimized
 exec-once = steam -silent
 exec-once = xrdb ~/.Xresources
+exec-once = $HOME/.local/bin/scripts/bw_hyprland.sh
 # exec-once = sunshine      BUG: Currently broken until wlr_screencopy_v1 is merged into sunshine -- (https://github.com/LizardByte/Sunshine/issues/2955)
 
 #############################
@@ -250,3 +250,4 @@ windowrulev2 = float, class:(steam), title:(Steam Settings)
 windowrulev2 = float, class:(steam), title:(Friends List)
 windowrulev2 = float, class:(org.openrgb.OpenRGB), title:(OpenRGB)
 windowrulev2 = float, class:(org.openrgb.OpenRGB), title:(Profile Name)
+windowrulev2 = suppressevent maximize, class:^(firefox)$
