Update hyprland config

--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -42,22 +42,24 @@ $browser = firefox
 #################
 ### AUTOSTART ###
 #################
-exec-once = ags
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = swww-daemon
-exec-once = ~/.local/bin/scripts/swwwslideshow.sh ~/Pictures/Wallpapers
+# exec-once = ags
+# exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+# exec-once = sunshine      BUG: Currently broken until wlr_screencopy_v1 is merged into sunshine -- (https://github.com/LizardByte/Sunshine/issues/2955)
+exec-once = waybar -c ~/.config/waybar/config.jsonc
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = swaync
+exec-once = swww-daemon
 exec-once = discord --start-minimized
 exec-once = steam -silent
 exec-once = xrdb ~/.Xresources
+exec-once = $HOME/.local/bin/scripts/swwwslideshow.sh ~/Pictures/Wallpapers
 exec-once = $HOME/.local/bin/scripts/bw_hyprland.sh
-# exec-once = sunshine      BUG: Currently broken until wlr_screencopy_v1 is merged into sunshine -- (https://github.com/LizardByte/Sunshine/issues/2955)
 
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
 env = XCURSOR_SIZE,24
-env = HYPRCURSOR_THEME,hyprcursor_Dracula
+# env = HYPRCURSOR_THEME,hyprcursor_Dracula
 env = HYPRCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
@@ -173,11 +175,12 @@ bind = $META+SHIFT, Return, exec, $terminal # Launch kitty
 bind = $META+SHIFT, C, killactive, # Kill active windows
 bind = $META+SHIFT, Q, exit, # Exit hyprland
 bind = $META, E, exec, $fileManager
-bind = $META+SHIFT, E, exec, nautilus
+bind = $META+SHIFT, E, exec, dolphin
 bind = $META, V, togglefloating,
 bind = $META, P, exec, $menu # Launch wofi
 bind = $META+SHIFT, f, exec, $browser # Launch firefox
 bind = Control_L+SHIFT, Escape, exec, kitty -e htop # Launch htop
+bind = , Print, exec, grim -g "$(slurp)"
 
 # Move focus with META + arrow keys
 bind = $META, left, movefocus, l
@@ -234,8 +237,10 @@ bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
-# Hyprpanel (Bar)
-binde = $META, b, exec, ags -t bar-0
+# Status Bars
+# binde = $META, b, exec, ags -t bar-0 # Hyprpanel
+binde = $META, B, exec, killall -SIGUSR1 waybar 
+binde = $META+Shift, R, exec, killall waybar && waybar
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
