--- a/private_dot_config/ncmpcpp/config
+++ b/private_dot_config/ncmpcpp/config
@@ -330,7 +330,7 @@ mpd_music_dir = /mnt/truenas/media/Music/Library/
 ## Note: Custom command that will be executed each time song changes. Useful for
 ## notifications etc.
 ##
-execute_on_song_change = notify-send "Now Playing" "$(mpc --format '%title% \n%artist% - %album%' current)"
+# execute_on_song_change = notify-send "Now Playing" "$(mpc --format '%title% \n%artist% - %album%' current)"
 execute_on_song_change = songinfo
 ##
 ## Note: Custom command that will be executed each time player state
