--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -14,14 +14,38 @@
 # | ╚═════╝ ╚═════╝ ╚═╝  ╚═══╝╚═╝     ╚═╝ ╚═════╝                     |
 # +===================================================================+
 
-################
-###  NVIDIA  ###
-################
-env = LIBVA_DRIVER_NAME,nvidia
+#############################
+### ENVIRONMENT VARIABLES ###
+#############################
+
+# Toolkits
+env = GDK_BACKEND,wayland,x11,*
+env = QT_QPA_PLATFORM,wayland;xcb
+env = SDL_VIDEODRIVER,wayland
+env = CLUTTER_BACKEND,wayland
+
+# XDG Specs
+env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
-env = GBM_BACKEND,nvidia-drm
+env = XDG_SESSION_DESKTOP,Hyprland
+
+# Themes
+env = XCURSOR_SIZE,24
+env = HYPRCURSOR_SIZE,24
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_QPA_PLATFORMTHEME,qt6ct
+# env = QT_QPA_PLATFORMTHEME,kde
+
+# SSH
+env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
+
+# Nvidia
+env = GBV_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = NVD_BACKEND_direct
+env = LIBVA_DRIVER_NAME,nvidia
+env = NVD_BACKEND,direct
+# env = __GL_GSYNC_ALLOWED,true
+# env = __GL_VRR_ALLOWED,true
 
 ################
 ### MONITORS ###
@@ -42,27 +66,22 @@ $browser = firefox
 #################
 ### AUTOSTART ###
 #################
-# exec-once = ags
-# exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # exec-once = sunshine      BUG: Currently broken until wlr_screencopy_v1 is merged into sunshine -- (https://github.com/LizardByte/Sunshine/issues/2955)
-exec-once = waybar -c ~/.config/waybar/config.jsonc
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
-exec-once = swaync
-exec-once = swww-daemon
-exec-once = discord --start-minimized
-exec-once = steam -silent
-exec-once = xrdb ~/.Xresources
-exec-once = $HOME/.local/bin/scripts/swwwslideshow.sh ~/Pictures/Wallpapers
-exec-once = $HOME/.local/bin/scripts/bw_hyprland.sh
+# exec-once = /usr/lib/polkit-kde-authentication-agent-1
+# exec-once = waybar -c ~/.config/waybar/config.jsonc
+# exec-once = swaync
 
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
-env = XCURSOR_SIZE,24
-# env = HYPRCURSOR_THEME,hyprcursor_Dracula
-env = HYPRCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt6ct
-env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
+# Wallpaper
+exec-once = swww-daemon
+exec-once = $HOME/.local/bin/scripts/swwwslideshow.sh ~/Pictures/Wallpapers
+
+# If using uwsm run systemctl --user enable --now hyprpolkitagent.service & waybar.service
+exec-once = systemctl --user start hyprpolkitagent
+exec-once = hyprpanel
+exec-once = discord --start-minimized
+exec-once = steam
+exec-once = xrdb ~/.Xresources
+
 
 
 #####################
@@ -79,14 +98,14 @@ general {
     allow_tearing = false
 }
 
+ecosystem {
+    no_update_news = true
+  }
+
 decoration {
     rounding = 10
     active_opacity = 1.0
     inactive_opacity = 1.0
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
     blur {
         enabled = true
         size = 6
@@ -115,10 +134,8 @@ master {
     new_status = master
     new_on_top = false
     new_on_active = none
-    no_gaps_when_only = 2
     orientation = left
     inherit_fullscreen = true
-    always_center_master = false
     smart_resizing = true
     drop_at_cursor = true
 }
@@ -136,8 +153,6 @@ misc {
 }
 
 cursor {
-    no_hardware_cursors = false
-    allow_dumb_copy= true # Allow hardware cursors on nvidia
     hide_on_key_press = false
     inactive_timeout = 2
   }
@@ -157,7 +172,7 @@ input {
     follow_mouse = 1
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
     accel_profile = flat
-    # kb_options = caps:swapescape
+    kb_options = caps:swapescape
 }
 
 gestures {
@@ -238,14 +253,14 @@ bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
 # Status Bars
-# binde = $META, b, exec, ags -t bar-0 # Hyprpanel
-binde = $META, B, exec, killall -SIGUSR1 waybar 
-binde = $META+Shift, R, exec, killall waybar && waybar
+binde = $META, B, exec, hyprpanel toggleWindow bar-0
+# binde = $META, B, exec, killall -SIGUSR1 waybar
+# binde = $META+Shift, R, exec, killall waybar && waybar
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
-
+# Use hyprctl clients to get window names
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = float, class:(zenity), title:(Winetricks)
 windowrulev2 = float, class:(blueman-manager), title:(Bluetooth Devices)
@@ -256,3 +271,8 @@ windowrulev2 = float, class:(steam), title:(Friends List)
 windowrulev2 = float, class:(org.openrgb.OpenRGB), title:(OpenRGB)
 windowrulev2 = float, class:(org.openrgb.OpenRGB), title:(Profile Name)
 windowrulev2 = suppressevent maximize, class:^(firefox)$
+windowrulev2 = workspace 8 silent, class:^(discord)$
+# windowrulev2 = fullscreen, class:(steam), title:(steam)
+windowrulev2 = workspace 9 silent, class:^(steam)$
+windowrulev2 = float, class:(steam), title:(Friends List)
+windowrulev2 = opacity 0.8 opacity override,class:^(kitty)
