--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -43,8 +43,8 @@ env = GBV_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = LIBVA_DRIVER_NAME,nvidia
 env = NVD_BACKEND,direct
-# env = __GL_GSYNC_ALLOWED,true
-# env = __GL_VRR_ALLOWED,true
+env = __GL_GSYNC_ALLOWED,1
+env = __GL_VRR_ALLOWED,1
 
 ################
 ### MONITORS ###
