Move from wofi to rofi

--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -59,7 +59,7 @@ monitor= DP-1, 3440x1440@165, 0x0, 1
 $META = SUPER
 $terminal = kitty
 $fileManager = kitty -e lf
-$menu = wofi -H 400 -W 600 --show drun --insensitive -I
+$menu = rofi -show
 $browser = firefox
 
 #################
