Clean up autostarts

--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -66,17 +66,19 @@ $browser = firefox
 ### AUTOSTART ###
 #################
 # exec-once = sunshine      BUG: Currently broken until wlr_screencopy_v1 is merged into sunshine -- (https://github.com/LizardByte/Sunshine/issues/2955)
-# exec-once = /usr/lib/polkit-kde-authentication-agent-1
-# exec-once = waybar -c ~/.config/waybar/config.jsonc
-# exec-once = swaync
 
 # Wallpaper
 exec-once = swww-daemon
 exec-once = $HOME/.local/bin/scripts/swwwslideshow.sh ~/Pictures/Wallpapers
 
-# If using uwsm run systemctl --user enable --now hyprpolkitagent.service & waybar.service
+# Clipboard
+exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+
+exec-once = nm-applet
+exec-once = blueman-applet
+exec-once = waybar -c ~/.config/waybar/config.jsonc
 exec-once = systemctl --user start hyprpolkitagent
-exec-once = hyprpanel
 exec-once = discord --start-minimized
 exec-once = steam
 exec-once = xrdb ~/.Xresources
