--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -168,12 +168,12 @@ debug {
 
 input {
     kb_layout = us
-    repeat_delay = 250
-    repeat_rate = 75
+    repeat_delay = 300
+    repeat_rate = 50
     follow_mouse = 1
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
     accel_profile = flat
-    kb_options = caps:swapescape
+    # kb_options = caps:swapescape
 }
 
 gestures {
