Move app keybinds to use new applications

--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -191,9 +191,9 @@ bind = $META+SHIFT, Return, exec, $terminal # Launch kitty
 bind = $META+SHIFT, C, killactive, # Kill active windows
 bind = $META+SHIFT, Q, exit, # Exit hyprland
 bind = $META, E, exec, $fileManager
-bind = $META+SHIFT, E, exec, dolphin
+bind = $META+SHIFT, E, exec, nautilus
 bind = $META, V, togglefloating,
-bind = $META, P, exec, $menu # Launch wofi
+bind = $META, P, exec, $menu # Launch rofi
 bind = $META+SHIFT, f, exec, $browser # Launch firefox
 bind = Control_L+SHIFT, Escape, exec, kitty -e htop # Launch htop
 bind = , Print, exec, grim -g "$(slurp)"
