Change back to waybar from hyprpanel

--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -254,9 +254,8 @@ bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
 # Status Bars
-binde = $META, B, exec, hyprpanel toggleWindow bar-0
-# binde = $META, B, exec, killall -SIGUSR1 waybar
-# binde = $META+Shift, R, exec, killall waybar && waybar
+binde = $META, B, exec, killall -SIGUSR1 waybar
+binde = $META+Shift, R, exec, killall waybar && waybar
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
