Disable kitty blur
- Already enabled in hyprland

--- a/private_dot_config/kitty/kitty.conf
+++ b/private_dot_config/kitty/kitty.conf
@@ -4,7 +4,7 @@ enable_audio_bell no
 window_padding_width 16
 confirm_os_window_close 0
 background_opacity 0.75
-background_blur 1
+# background_blur 1
 
 
 # BEGIN_KITTY_THEME
