Update hyprland config
- Add new autostart for pia client
- Add testing for flameshot
- Add experiemental color management option (for HDR)
- Add bitwarden script to launch as a float instead of opening a whole
new window split

--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -70,10 +70,12 @@ $browser = firefox
 # Wallpaper
 exec-once = swww-daemon
 exec-once = $HOME/.local/bin/scripts/swwwslideshow.sh ~/Pictures/Wallpapers
+##
 
 # Clipboard
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+##
 
 exec-once = nm-applet
 exec-once = blueman-applet
@@ -81,7 +83,10 @@ exec-once = waybar -c ~/.config/waybar/config.jsonc
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = discord --start-minimized
 exec-once = steam
+exec-once = [workspace 2 silent] firefox
 exec-once = xrdb ~/.Xresources
+exec-once = flameshot
+exec-once= /opt/piavpn/bin/pia-client --quiet
 
 
 
@@ -141,6 +146,10 @@ master {
     drop_at_cursor = true
 }
 
+experimental {
+    xx_color_management_v4 = true
+  }
+
 # Master-Layout Binds
 binde = $META, j, layoutmsg, cyclenext
 binde = $META, k, layoutmsg, cycleprev
@@ -173,6 +182,7 @@ input {
     follow_mouse = 1
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
     accel_profile = flat
+    sensitivity = 0.000000
     # kb_options = caps:swapescape
 }
 
@@ -196,7 +206,8 @@ bind = $META, V, togglefloating,
 bind = $META, P, exec, $menu # Launch rofi
 bind = $META+SHIFT, f, exec, $browser # Launch firefox
 bind = Control_L+SHIFT, Escape, exec, kitty -e htop # Launch htop
-bind = , Print, exec, grim -g "$(slurp)"
+# bind = , Print, exec, grim -g "$(slurp)"
+bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
 
 # Move focus with META + arrow keys
 bind = $META, left, movefocus, l
@@ -276,3 +287,20 @@ windowrulev2 = workspace 8 silent, class:^(discord)$
 windowrulev2 = workspace 9 silent, class:^(steam)$
 windowrulev2 = float, class:(steam), title:(Friends List)
 windowrulev2 = opacity 0.8 opacity override,class:^(kitty)
+
+# Fix Bitwarden Window
+windowrulev2 = suppressevent maximize, class:^(firefox)$
+exec-once = $HOME/.local/bin/scripts/bitwarden_hyprland_fix.sh
+
+# Flameshot Testing
+windowrule = noanim, class:^(flameshot)$
+windowrule = float, class:^(flameshot)$
+windowrule = move 0 0, class:^(flameshot)$
+windowrule = pin, class:^(flameshot)$
+# set this to your leftmost monitor id, otherwise you have to move your cursor to the leftmost monitor
+# before executing flameshot
+windowrule = monitor 1, class:^(flameshot)$
+
+# ctrl-c to copy from the flameshot gui gives warped images sometimes, but
+# setting the env fixes it
+# bind = ..., exec, XDG_CURRENT_DESKTOP=sway flameshot gui
