Update Hyprland Config

--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -49,8 +49,9 @@ env = __GL_VRR_ALLOWED,1
 ################
 ### MONITORS ###
 ################
+#monitor= DP-1, 3440x1440@165, 0x0, 1,bitdepth,10,cm,auto
 monitor= DP-1, 3440x1440@165, 0x0, 1
-# monitor= HEADLESS-2, 2732x2048@120, 0x0,2    BUG: Currently broken until wlr_screencopy_v1 is merged into sunshine -- (https://github.com/LizardByte/Sunshine/issues/2955)
+monitor= HEADLESS-2, 2732x2048@120, 19200x0,2
 
 ###################
 ###  PROGRAMS   ###
@@ -65,7 +66,6 @@ $browser = firefox
 #################
 ### AUTOSTART ###
 #################
-# exec-once = sunshine      BUG: Currently broken until wlr_screencopy_v1 is merged into sunshine -- (https://github.com/LizardByte/Sunshine/issues/2955)
 
 # Wallpaper
 exec-once = swww-daemon
@@ -77,17 +77,24 @@ exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 ##
 
+# SystemD
+exec-once = systemctl --user start sunshine
+exec-once = systemctl --user start hyprpolkitagent
+##
+
+# Applications
 exec-once = nm-applet
+exec-once = mako
 exec-once = blueman-applet
 exec-once = waybar -c ~/.config/waybar/config.jsonc
-exec-once = systemctl --user start hyprpolkitagent
-exec-once = discord --start-minimized
+exec-once = discord
 exec-once = steam
 exec-once = [workspace 2 silent] firefox
+exec-once = [workspace 4 silent] fooyin
 exec-once = xrdb ~/.Xresources
-exec-once = flameshot
 exec-once= /opt/piavpn/bin/pia-client --quiet
-
+exec-once = pavucontrol --gapplication-service
+##
 
 
 #####################
@@ -96,16 +103,17 @@ exec-once= /opt/piavpn/bin/pia-client --quiet
 general {
     layout = master
     gaps_in = 5
-    gaps_out = 20
-    border_size = 2
+    gaps_out = 5
+    border_size = 1
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
     resize_on_border = false
-    allow_tearing = false
+    # allow_tearing = true
 }
 
 ecosystem {
     no_update_news = true
+    no_donation_nag = true
   }
 
 decoration {
@@ -114,11 +122,15 @@ decoration {
     inactive_opacity = 1.0
     blur {
         enabled = true
-        size = 50
+        size = 5
         passes = 5
         vibrancy = 0.1696
         special = true
     }
+  shadow {
+    range = 4
+
+  }
 }
 
 animations {
@@ -146,6 +158,10 @@ master {
     drop_at_cursor = true
 }
 
+render {
+  cm_fs_passthrough = 2
+}
+
 experimental {
     xx_color_management_v4 = true
   }
@@ -159,12 +175,12 @@ binde = $META, M, fullscreen
 misc {
     vrr = 2  # [2] Set vrr to fullscreen only [1] Set vrr to always on [0] Set vrr to off
     enable_swallow = true
-    swallow_regex = ^(Alacritty|kitty|foot)$
+    swallow_regex = ^(Alacritty|kitty|foot|ghostty)$
 }
 
 cursor {
-    hide_on_key_press = false
-    inactive_timeout = 2
+    # hide_on_key_press = true
+    inactive_timeout = 3
   }
 
 debug {
@@ -182,7 +198,6 @@ input {
     follow_mouse = 1
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
     accel_profile = flat
-    sensitivity = 0.000000
     # kb_options = caps:swapescape
 }
 
@@ -201,13 +216,13 @@ bind = $META+SHIFT, Return, exec, $terminal # Launch kitty
 bind = $META+SHIFT, C, killactive, # Kill active windows
 bind = $META+SHIFT, Q, exit, # Exit hyprland
 bind = $META, E, exec, $fileManager
-bind = $META+SHIFT, E, exec, nautilus
+bind = $META+SHIFT, E, exec, dolphin
 bind = $META, V, togglefloating,
 bind = $META, P, exec, $menu # Launch rofi
 bind = $META+SHIFT, f, exec, $browser # Launch firefox
-bind = Control_L+SHIFT, Escape, exec, kitty -e htop # Launch htop
+bind = Control_L+SHIFT, Escape, exec, missioncenter # Launch missioncenter
 # bind = , Print, exec, grim -g "$(slurp)"
-bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
+# bind = , Print, exec, grim -g "$(slurp -d)" | wl-copy
 
 # Move focus with META + arrow keys
 bind = $META, left, movefocus, l
@@ -272,35 +287,26 @@ binde = $META+Shift, R, exec, killall waybar && waybar
 ### WINDOWS AND WORKSPACES ###
 ##############################
 # Use hyprctl clients to get window names
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrulev2 = float, class:(zenity), title:(Winetricks)
-windowrulev2 = float, class:(blueman-manager), title:(Bluetooth Devices)
-windowrulev2 = float, class:(xarchiver), title:()
-windowrulev2 = float, class:(org.pulseaudio.pavucontrol), title:()
-windowrulev2 = float, class:(steam), title:(Steam Settings)
-windowrulev2 = float, class:(steam), title:(Friends List)
-windowrulev2 = float, class:(org.openrgb.OpenRGB), title:(OpenRGB)
-windowrulev2 = float, class:(org.openrgb.OpenRGB), title:(Profile Name)
-windowrulev2 = suppressevent maximize, class:^(firefox)$
-windowrulev2 = workspace 8 silent, class:^(discord)$
-# windowrulev2 = fullscreen, class:(steam), title:(steam)
-windowrulev2 = workspace 9 silent, class:^(steam)$
-windowrulev2 = float, class:(steam), title:(Friends List)
-windowrulev2 = opacity 0.8 opacity override,class:^(kitty)
+windowrule = suppressevent maximize, class:.* # You'll probably like this.
+windowrule = float, class:(zenity), title:(Winetricks)
+windowrule = float, class:(blueman-manager), title:(Bluetooth Devices)
+windowrule = float, class:(xarchiver), title:()
+windowrule = float, class:(org.pulseaudio.pavucontrol), title:(Volume Control)
+windowrule = float, class:(steam), title:(Steam Settings)
+windowrule = float, class:(steam), title:(Friends List)
+windowrule = float, class:(org.openrgb.OpenRGB), title:(OpenRGB)
+windowrule = float, class:(org.openrgb.OpenRGB), title:(Profile Name)
+windowrule = suppressevent maximize, class:^(firefox)$
+windowrule = workspace 8 silent, class:^(discord)$
+windowrule = fullscreen, class:^(discord)$
+windowrule = workspace 9 silent, class:^(steam)$
+windowrule = float, class:(steam), title:(Friends List)
+windowrule = opacity 0.8 opacity override,class:^(kitty)
+windowrule = float, class:(org.gnome.Calculator), title:(Calculator)
+windowrule = float, class:(com.github.wwmm.easyeffects), title:(Easy Effects)
 
-# Fix Bitwarden Window
-windowrulev2 = suppressevent maximize, class:^(firefox)$
-exec-once = $HOME/.local/bin/scripts/bitwarden_hyprland_fix.sh
-
-# Flameshot Testing
-windowrule = noanim, class:^(flameshot)$
-windowrule = float, class:^(flameshot)$
-windowrule = move 0 0, class:^(flameshot)$
-windowrule = pin, class:^(flameshot)$
-# set this to your leftmost monitor id, otherwise you have to move your cursor to the leftmost monitor
-# before executing flameshot
-windowrule = monitor 1, class:^(flameshot)$
-
-# ctrl-c to copy from the flameshot gui gives warped images sometimes, but
-# setting the env fixes it
-# bind = ..., exec, XDG_CURRENT_DESKTOP=sway flameshot gui
+# LayerRules
+layerrule = blur, rofi
+layerrule = blur, notifications
+layerrule = blur, mako
+layerrule = ignorezero, notifications
