--- a/private_dot_config/kitty/kitty.conf
+++ b/private_dot_config/kitty/kitty.conf
@@ -3,12 +3,12 @@ font_size 14.0
 enable_audio_bell no
 window_padding_width 16
 confirm_os_window_close 0
-background_opacity 0.75
+background_opacity 1
 # background_blur 1
 
 
 # BEGIN_KITTY_THEME
-# Dracula
+# Tokyo Night Storm
 include current-theme.conf
 # END_KITTY_THEME
 
